Added transition support for old browser

--- a/react-app/src/components/ImageLoad.css
+++ b/react-app/src/components/ImageLoad.css
@@ -13,10 +13,18 @@ body {
 }
 
 .image-wrap-load {
+	-webkit-transition: opacity 0.5s;
+	-moz-transition: opacity 0.5s;
+	-ms-transition: opacity 0.5s;
+	-o-transition: opacity 0.5s;
 	transition: opacity 0.5s;
 }
 
 .image-lazy-load .image-wrap-load {
+	-webkit-transition: opacity 0.5s;
+	-moz-transition: opacity 0.5s;
+	-ms-transition: opacity 0.5s;
+	-o-transition: opacity 0.5s;
 	transition: opacity 0.5s;
 	opacity: 0;
 }
